--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,6 @@ ErrorDocument 404 /404.php
 
 <IfModule mod_php5.c>
   php_flag session.use_trans_sid off
-  #php_value display_errors 1
   php_value mbstring.internal_encoding UTF-8
   php_value max_input_vars 10000
   php_value mbstring.func_overload 2
@@ -13,42 +12,29 @@ ErrorDocument 404 /404.php
 <IfModule mod_rewrite.c>
   Options +FollowSymLinks
   RewriteEngine On
-#RewriteCond %{HTTPS} off
-#RewriteCond %{SERVER_PORT} !^443$
-#RewriteCond %{REQUEST_URI} !^/bitrix/
-#RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
-#RewriteCond %{SERVER_PORT} !^443$
-#RewriteRule .* https://%{SERVER_NAME}%{REQUEST_URI} [R=301,L]
+  # Обработка запросов через virtual_file_system.php если файл, ссылка или директория существуют
+  RewriteCond %{REQUEST_FILENAME} -f [OR]
+  RewriteCond %{REQUEST_FILENAME} -l [OR]
+  RewriteCond %{REQUEST_FILENAME} -d
+  RewriteCond %{REQUEST_FILENAME} [\xC2-\xDF][\x80-\xBF] [OR]
+  RewriteCond %{REQUEST_FILENAME} \xE0[\xA0-\xBF][\x80-\xBF] [OR]
+  RewriteCond %{REQUEST_FILENAME} [\xE1-\xEC\xEE\xEF][\x80-\xBF]{2} [OR]
+  RewriteCond %{REQUEST_FILENAME} \xED[\x80-\x9F][\x80-\xBF] [OR]
+  RewriteCond %{REQUEST_FILENAME} \xF0[\x90-\xBF][\x80-\xBF]{2} [OR]
+  RewriteCond %{REQUEST_FILENAME} [\xF1-\xF3][\x80-\xBF]{3} [OR]
+  RewriteCond %{REQUEST_FILENAME} \xF4[\x80-\x8F][\x80-\xBF]{2}
+  RewriteCond %{REQUEST_FILENAME} !/bitrix/virtual_file_system.php$
+  RewriteRule ^(.*)$ /bitrix/virtual_file_system.php [L]
 
-#RewriteCond %{HTTPS} =off
-#RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [QSA,L]
-#
-#RewriteCond %{ENV:HTTPS} !on
-#
-#RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-
-#
-#RewriteCond %{HTTP:X-Forwarded-Proto} !https
-#RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-
-RewriteCond %{REQUEST_FILENAME} -f [OR]
-RewriteCond %{REQUEST_FILENAME} -l [OR]
-RewriteCond %{REQUEST_FILENAME} -d
-RewriteCond %{REQUEST_FILENAME} [\xC2-\xDF][\x80-\xBF] [OR]
-RewriteCond %{REQUEST_FILENAME} \xE0[\xA0-\xBF][\x80-\xBF] [OR]
-RewriteCond %{REQUEST_FILENAME} [\xE1-\xEC\xEE\xEF][\x80-\xBF]{2} [OR]
-RewriteCond %{REQUEST_FILENAME} \xED[\x80-\x9F][\x80-\xBF] [OR]
-RewriteCond %{REQUEST_FILENAME} \xF0[\x90-\xBF][\x80-\xBF]{2} [OR]
-RewriteCond %{REQUEST_FILENAME} [\xF1-\xF3][\x80-\xBF]{3} [OR]
-RewriteCond %{REQUEST_FILENAME} \xF4[\x80-\x8F][\x80-\xBF]{2}
-RewriteCond %{REQUEST_FILENAME} !/bitrix/virtual_file_system.php$
-RewriteRule ^(.*)$ /bitrix/virtual_file_system.php [L]
+  # Обработка запросов через urlrewrite.php если запрошенный объект отсутствует
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-l
   RewriteCond %{REQUEST_FILENAME} !-d
   RewriteCond %{REQUEST_FILENAME} !/bitrix/urlrewrite.php$
   RewriteRule ^(.*)$ /bitrix/urlrewrite.php [L]
+
+  # Передача заголовка авторизации в переменную окружения REMOTE_USER
   RewriteRule .* - [E=REMOTE_USER:%{HTTP:Authorization}]
 </IfModule>
 
@@ -68,4 +54,3 @@ RewriteRule ^(.*)$ /bitrix/virtual_file_system.php [L]
 <FilesMatch "\.(js)$">
   Header set Cache-Control "no-cache, no-store, must-revalidate"
 </FilesMatch>
-
