--- a/.gitignore
+++ b/.gitignore
@@ -408,4 +408,15 @@ upload/tmp/
 upload/resize_cache/
 bitrix/*.DS_Store
 
-*.DS_Store
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+._.DS_Store
+**/.DS_Store
+**/._.DS_Store
