--- a/.gitignore
+++ b/.gitignore
@@ -345,6 +345,9 @@ __pycache__/
 *.odx.cs
 *.xsd.cs
 
+.vscode
+
+
 # OpenCover UI analysis results
 OpenCover/
 
@@ -413,7 +416,8 @@ bitrix/*.DS_Store
 # OS generated files
 .DS_Store
 .DS_Store?
-._*
+._.DS_Store
+
 .Spotlight-V100
 .Trashes
 ehthumbs.db
@@ -422,3 +426,4 @@ Thumbs.db
 ._.DS_Store
 **/.DS_Store
 **/._.DS_Store
+**/**/**/**/**/.DS_Store
